断点，准备学习SPRING第十章节 命名空间注入

--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -12,6 +12,7 @@
         <module>SpringTest01</module>
         <module>SpringTest02-IOC-helloSpring</module>
         <module>SpringTest03-IOC-createStyle</module>
+        <module>SpringTest04</module>
     </modules>
 
     <dependencies>
