--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.3.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 </project>
