Spring 注解开发 章节完毕

--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -15,6 +15,7 @@
         <module>SpringTest04</module>
         <module>SpringTest05-Autoland</module>
         <module>SpringTest05-Autowired</module>
+        <module>SpringTest06-anno</module>
     </modules>
 
     <dependencies>
