--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -16,6 +16,7 @@
         <module>SpringTest05-Autoland</module>
         <module>SpringTest05-Autowired</module>
         <module>SpringTest06-anno</module>
+        <module>SpringTest07-appconfig</module>
     </modules>
 
     <dependencies>
