Spring 动态代理章节学完

--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -17,6 +17,7 @@
         <module>SpringTest05-Autowired</module>
         <module>SpringTest06-anno</module>
         <module>SpringTest07-appconfig</module>
+        <module>SpringTest08-proxy</module>
     </modules>
 
     <dependencies>
