--- a/SpringChap01/SpringTest09-aop/pom.xml
+++ b/SpringChap01/SpringTest09-aop/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>SpringTest09-aop</artifactId>
 
+    <dependencies>
+        <dependency>
+            <!-- heeps://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
