Spring 章节完毕 声明式事务章节学习完毕

--- a/SpringChap01/pom.xml
+++ b/SpringChap01/pom.xml
@@ -20,6 +20,7 @@
         <module>SpringTest08-proxy</module>
         <module>SpringTest09-aop</module>
         <module>SpringTest10-mybatis</module>
+        <module>SpringTest11-transaction</module>
     </modules>
 
     <dependencies>
