--- a/apache-tomcat-6.0.45/conf/logging.properties
+++ b/apache-tomcat-6.0.45/conf/logging.properties
@@ -22,23 +22,23 @@ handlers = 1catalina.org.apache.juli.FileHandler, 2localhost.org.apache.juli.Fil
 # Describes specific configuration info for Handlers.
 ############################################################
 
-1catalina.org.apache.juli.FileHandler.level = DEBUG
+1catalina.org.apache.juli.FileHandler.level = FINE
 1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 1catalina.org.apache.juli.FileHandler.prefix = catalina.
 
-2localhost.org.apache.juli.FileHandler.level = DEBUG
+2localhost.org.apache.juli.FileHandler.level = FINE
 2localhost.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 2localhost.org.apache.juli.FileHandler.prefix = localhost.
 
-3manager.org.apache.juli.FileHandler.level = DEBUG
+3manager.org.apache.juli.FileHandler.level = FINE
 3manager.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 3manager.org.apache.juli.FileHandler.prefix = manager.
 
-4host-manager.org.apache.juli.FileHandler.level = DEBUG
+4host-manager.org.apache.juli.FileHandler.level = FINE
 4host-manager.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 4host-manager.org.apache.juli.FileHandler.prefix = host-manager.
 
-java.util.logging.ConsoleHandler.level = DEBUG
+java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 
@@ -56,7 +56,7 @@ org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/manager].handler
 org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].level = INFO
 org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].handlers = 4host-manager.org.apache.juli.FileHandler
 
-# For example, to log debug messages in ContextConfig and HostConfig
+# For example, to log FINE messages in ContextConfig and HostConfig
 # classes and to log only warnings and errors in other
 # org.apache.catalina.** classes, uncomment these lines:
 #org.apache.catalina.startup.ContextConfig.level = FINE
